--- a/.github/workflows/python-tag.yml
+++ b/.github/workflows/python-tag.yml
@@ -8,7 +8,7 @@ on:
         required: true
         type: string
     secrets:
-      GITHUB_TOKEN:
+      GH_TOKEN:
         required: true
 
 
@@ -33,4 +33,4 @@ jobs:
           python-version: ${{ inputs.python-version }}
           python-module: ${{ inputs.module-name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
